--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "openai": "^6.9.1",
+    "playwright": "^1.56.1"
   }
 }
