--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "mysql2": "^3.15.3",
     "openai": "^6.9.1",
     "playwright": "^1.56.1"
   }
