--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "https-proxy-agent": "^7.0.6",
     "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
     "openai": "^6.9.1",
     "playwright": "^1.56.1"
   }
